--- a/styles/style.scss
+++ b/styles/style.scss
@@ -26,7 +26,10 @@ body {
   ::selection {
     @apply bg-primary bg-opacity-25 text-light;
   }
+}
 
+.rs-picker-menu {
+  z-index: 999999 !important;
 }
 
 .glass {
